// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline renders correctly 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  background-color: #d9dee2 !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c5:not(:last-child) {
  margin-bottom: 1rem;
}

.c5 .c7 {
  top: 0.15em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1::before {
  content: '';
  border: 1px solid #d9dee2;
  position: absolute;
  height: 100%;
  left: 0.25rem;
  margin-top: 1.25rem;
}

.c1:last-child::before {
  border: 0;
}

.c2 {
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 0.625rem;
  width: 0.625rem;
  margin-top: 1rem;
  margin-right: 0.5rem;
  z-index: 1;
}

.c4 {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
  line-height: 1.5rem;
  color: #435a6f;
  font-weight: 600;
}

.c4:not(:last-child) {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
}

.c6 {
  color: #435a6f;
}

<div
  class="c0"
>
  <div
    aria-describedby="StepDetail1"
    aria-labelledby="StepHeading1"
    class="c1 c0"
  >
    <div
      class="c2 c3"
    />
    <div
      aria-describedby="StepDetail1"
      aria-labelledby="StepHeading1"
      class="c0"
    >
      <p
        class="c4 c5 c0"
        id="StepHeading1"
      >
        Step one Heading
      </p>
      <div
        class="c6 c0"
        id="StepDetail1"
      >
        Step one details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail2"
    aria-labelledby="StepHeading2"
    class="c1 c0"
  >
    <div
      class="c2 c3"
    />
    <div
      aria-describedby="StepDetail2"
      aria-labelledby="StepHeading2"
      class="c0"
    >
      <p
        class="c4 c5 c0"
        id="StepHeading2"
      >
        Step two Heading
      </p>
      <div
        class="c6 c0"
        id="StepDetail2"
      >
        Step two details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail3"
    aria-labelledby="StepHeading3"
    class="c1 c0"
  >
    <div
      class="c2 c3"
    />
    <div
      aria-describedby="StepDetail3"
      aria-labelledby="StepHeading3"
      class="c0"
    >
      <p
        class="c4 c5 c0"
        id="StepHeading3"
      >
        Step three Heading
      </p>
      <div
        class="c6 c0"
        id="StepDetail3"
      >
        Step three details goes here
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline with activeStep renders correctly 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  background-color: #d9dee2 !important;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c4:not(:last-child) {
  margin-bottom: 1rem;
}

.c4 .c8 {
  top: 0.15em;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c6:last-child {
  margin-bottom: 0;
}

.c6::before {
  content: '';
  border: 1px solid #d9dee2;
  position: absolute;
  height: 100%;
  left: 0.25rem;
  margin-top: 1.25rem;
}

.c6:last-child::before {
  border: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1::before {
  content: '';
  border: 1px solid purple;
  position: absolute;
  height: 100%;
  left: 0.25rem;
  margin-top: 1.25rem;
}

.c1:last-child::before {
  border: 0;
}

.c2 {
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 0.625rem;
  width: 0.625rem;
  margin-top: 1rem;
  margin-right: 0.5rem;
  z-index: 1;
}

.c3 {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
  line-height: 1.5rem;
  color: #435a6f;
  font-weight: 600;
}

.c3:not(:last-child) {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
}

.c5 {
  color: #435a6f;
}

<div
  class="c0"
>
  <div
    aria-describedby="StepDetail1"
    aria-labelledby="StepHeading1"
    class="c1 c0"
  >
    <div
      class="c2 c0"
      style="background-color: purple;"
    />
    <div
      aria-describedby="StepDetail1"
      aria-labelledby="StepHeading1"
      class="c0"
    >
      <p
        class="c3 c4 c0"
        id="StepHeading1"
      >
        Step one Heading
      </p>
      <div
        class="c5 c0"
        id="StepDetail1"
      >
        Step one details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail2"
    aria-labelledby="StepHeading2"
    class="c6 c0"
  >
    <div
      class="c2 c0"
      style="background-color: purple;"
    />
    <div
      aria-describedby="StepDetail2"
      aria-labelledby="StepHeading2"
      class="c0"
    >
      <p
        class="c3 c4 c0"
        id="StepHeading2"
      >
        Step two Heading
      </p>
      <div
        class="c5 c0"
        id="StepDetail2"
      >
        Step two details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail3"
    aria-labelledby="StepHeading3"
    class="c6 c0"
  >
    <div
      class="c2 c7"
    />
    <div
      aria-describedby="StepDetail3"
      aria-labelledby="StepHeading3"
      class="c0"
    >
      <p
        class="c3 c4 c0"
        id="StepHeading3"
      >
        Step three Heading
      </p>
      <div
        class="c5 c0"
        id="StepDetail3"
      >
        Step three details goes here
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline with custom color in step renders correctly 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  background-color: #d9dee2 !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c5:not(:last-child) {
  margin-bottom: 1rem;
}

.c5 .c8 {
  top: 0.15em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1::before {
  content: '';
  border: 1px solid #d9dee2;
  position: absolute;
  height: 100%;
  left: 0.25rem;
  margin-top: 1.25rem;
}

.c1:last-child::before {
  border: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c7:last-child {
  margin-bottom: 0;
}

.c7::before {
  content: '';
  border: 1px solid green;
  position: absolute;
  height: 100%;
  left: 0.25rem;
  margin-top: 1.25rem;
}

.c7:last-child::before {
  border: 0;
}

.c2 {
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 0.625rem;
  width: 0.625rem;
  margin-top: 1rem;
  margin-right: 0.5rem;
  z-index: 1;
}

.c4 {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
  line-height: 1.5rem;
  color: #435a6f;
  font-weight: 600;
}

.c4:not(:last-child) {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
}

.c6 {
  color: #435a6f;
}

<div
  class="c0"
>
  <div
    aria-describedby="StepDetail1"
    aria-labelledby="StepHeading1"
    class="c1 c0"
  >
    <div
      class="c2 c3"
    />
    <div
      aria-describedby="StepDetail1"
      aria-labelledby="StepHeading1"
      class="c0"
    >
      <p
        class="c4 c5 c0"
        id="StepHeading1"
      >
        Step one Heading
      </p>
      <div
        class="c6 c0"
        id="StepDetail1"
      >
        Step one details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail2"
    aria-labelledby="StepHeading2"
    class="c7 c0"
  >
    <div
      class="c2 c0"
      style="background-color: green;"
    />
    <div
      aria-describedby="StepDetail2"
      aria-labelledby="StepHeading2"
      class="c0"
    >
      <p
        class="c4 c5 c0"
        id="StepHeading2"
      >
        Step two Heading
      </p>
      <div
        class="c6 c0"
        id="StepDetail2"
      >
        Step two details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail3"
    aria-labelledby="StepHeading3"
    class="c1 c0"
  >
    <div
      class="c2 c3"
    />
    <div
      aria-describedby="StepDetail3"
      aria-labelledby="StepHeading3"
      class="c0"
    >
      <p
        class="c4 c5 c0"
        id="StepHeading3"
      >
        Step three Heading
      </p>
      <div
        class="c6 c0"
        id="StepDetail3"
      >
        Step three details goes here
      </div>
    </div>
  </div>
</div>
`;
